--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
      
   <div class="container home">
    <header>
-    <div class="top-content">
+     <div class="header">
       <h1>Fun Bus</h1>
       <nav>
         <a href="#home">Home</a>
-        <a href="#about">About Us</a>
+        <a href="#about">About_Us</a>
         <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
-
    </header>
     <section class="content-section">
       <div class="text-content">
