--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </div>
    </header>
     <section class="content-section">
+      <div class="top-content">
+        <img src="img/fun-bus.jpg">
+        <h2>Welcome to Fun Bus!</h2>
+        <p>Pokem ipsum dolor sit amet Rainbow Badge Mineral Badge Ferrothorn Metagross Azumarill Gastly. Misty Bisharp Cacturne Luxio Mirror Move Slash like no one ever was. Brock Hydreigon Smoochum Riolu Venomoth Drifloon Entei. Poison Rotom The Power Of One Fire Pinsir Taillow Wooper. Hive Badge Vulpix Landorus Feebas Feraligatr Sewaddle Zorua. </p>
+      </div>
       <div class="text-content">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
