--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>Fun Bus</h1>
       <nav>
         <a href="#home">Home</a>
-        <a href="#about">About_Us</a>
+        <a href="#about">'About Us'</a>
         <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
       </nav>
